# Loris-Sort-Email

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mail_sorter/: __main__.py  actions.py  auth.py  classifier.py  db.py  graph.py  processor.py
tests/: conftest.py  test_actions.py  test_classifier.py
ui/: app.py
