[project]
name = "mail-sorter"
version = "0.1.0"
description = "Automatically sort and clean your Outlook inbox using a local AI model."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "keyring>=24.3.0",
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "sqlalchemy>=2.0.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
]

[project.scripts]
mail-sorter = "mail_sorter.__main__:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mail_sorter"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "B008",  # typer uses function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["mail_sorter"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
